--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 node_modules/
+model/
 npm-debug.log
 yarn-error.log
 pnpm-debug.log
@@ -16,6 +17,7 @@ error.log
 .env.test
 .env.*.local
 /config/config.json
+
 *.sqlite
 *.sqlite3
 database.sqlite
